--- a/front/html/cart.html
+++ b/front/html/cart.html
@@ -59,7 +59,7 @@
                     <p>42,00 €</p>
                   </div>
                   <div class="cart__item__content__settings">
-                    <div class="cart__item__content__settings__quantity">
+                    <div class=>
                       <p>Qté : </p>
                       <input type="number" class="itemQuantity" name="itemQuantity" min="1" max="100" value="42">
                     </div>
